# rts_monitoring_system_for_wikipedia

./: Cargo.toml
benches/: bench.rs  pipeline_comparison.rs  sync_contention.rs
data/: captured_events.jsonl
logs/: run_async.json  run_threaded.json
src/: allocator.rs  leaderboard.rs  lib.rs  logger.rs  main.rs  metrics.rs  model.rs  models.rs  queue.rs  state.rs  ui.rs  watchdog.rs
src/dashboard/: terminal.rs
src/ingestion/: async_pipeline.rs  mod.rs  overflow_channel.rs  sse_client.rs  threaded_pipeline.rs
src/metrics/: collector.rs  comparison.rs  mod.rs  percentile.rs  report.rs
src/parsing/: zero_copy.rs
src/pipeline/: async_pipe.rs  mod.rs  thread_pipe.rs
src/scheduling/: scheduler.rs
src/shared/: leaderboard_atomic.rs  leaderboard_mutex.rs  leaderboard_rwlock.rs  mod.rs
src/watchdog/: failsafe.rs  fault_injector.rs  mod.rs  timer.rs
test_data/: events.jsonl
tests/: unit_tests.rs
