[package]
name = "wiki-rts"
version = "1.0.0"
edition = "2021"
description = "Real-time Wikipedia edit monitoring engine with dual pipeline architecture"

[dependencies]
# Async runtime (Component A - async pipeline)
tokio = { version = "1", features = ["full"] }

# HTTP client for SSE stream (both async and blocking for dual pipeline)
reqwest = { version = "0.13.2", features = ["stream", "blocking"] }

# Zero-copy JSON parsing (Component B)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Timestamps and formatting
chrono = "0.4"

# Atomic types for lock-free leaderboard (Component D)
dashmap = "6"

# Random jitter for exponential backoff (Component E)
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pipeline_comparison"
harness = false

[[bench]]
name = "sync_contention"
harness = false

[profile.release]
opt-level = 3
lto = true
