[package]
name    = "wikipedia-rts"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio        = { version = "1", features = ["full"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
reqwest      = { version = "0.12", features = ["blocking", "stream"] }
futures-util = "0.3"
chrono       = "0.4"
ratatui      = "0.26"
crossterm    = "0.27"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name    = "bench"
harness = false
